# project_2_bondarenko_anton

./: .gitignore  Makefile  README.md  pyproject.toml
src/: decorators.py
src/primitive_db/: constants.py  core.py  engine.py  parser.py  utils.py
